add items to documents
